# android-translator

./: .gitignore  CHEATSHEET.txt  OrderedSet.py  README.md  android2csv.sh  android_translator.py  androidproject2csv.py  csv2android.sh  csv2androidproject.py  export_html.sh  export_translations.py  import_html.sh  import_translations.py  pyproject.toml  util.py
.github/: copilot-instructions.md
commands/: __init__.py  html_export.py  html_import.py  strings_export.py  strings_import.py
commands/utils/: util.py
