[tool.poetry]
name = "android-translator"
version = "2.0.0"
description = "A unified CLI tool for managing translations in Android projects (strings.xml and HTML files)"
authors = ["Jean-Philippe Jodoin", "Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/android-strings-to-csv"
repository = "https://github.com/yourusername/android-strings-to-csv"
keywords = ["android", "translation", "i18n", "l10n", "strings", "excel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
openpyxl = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
android-translator = "android_translator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
